--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -3,9 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Great Idea!</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
@@ -15,9 +14,104 @@
 </head>
 
   <body>
+    <div class="nav-container">
+      <nav>
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+    </div>
+    <div class="action-container">
+      <div class="action-container-inner">
+        <h1>
+          Innovation <br />
+          On <br />
+          Demand <button>Get Started</button>
+        </h1>
+      </div>
+      <img src="img/header-img.png" alt="Image of a code snippet." />
+    </div>
+    <section class="first-section">
+      <div class="content-first">
+        <h2>
+          Features
+        </h2>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div class="content-first">
+        <h2>
+          About
+        </h2>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section class="second-section">
+    <img
+      class="middle-img"
+      src="img/mid-page-accent.jpg"
+      alt="Image of code snippets across the screen"
+    />
+    <section class="second-section">
+      <div class="content-second">
+        <h2>
+          Services
+        </h2>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
+      <div class="content-second">
+        <h2>
+          Product
+        </h2>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+
+      <div class="content-second">
+        <h2>
+          Vision
+        </h2>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section>
     
+    <footer id="footer">
+      <address>
+        <h2>
+          Contact
+        </h2>
+        123 Way 456 Street <br>
+        Somewhere, USA <br />
+        <br>
+        1 (888) 888-8888 <br />
+        <br>
+        <a href="sales@greatidea.io">sales@greatidea.io</a>
+      </address>
+      <div id="copyright">
+        Copyright Great Idea! 2018
+      </div>
+    </footer>
   </body>
 </html>
