--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,22 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Great Idea!</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta charset="utf-8" />
+    <title>Great Idea!</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
   <body>
     <div class="nav-container">
       <nav>
-        <a href="#">Services</a>
+        <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
@@ -26,15 +32,18 @@
       <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
     </div>
     <div class="action-container">
-      <div class="action-container-inner">
+      <div id="action-container-inner">
         <h1>
           Innovation <br />
           On <br />
-          Demand <button>Get Started</button>
+          Demand
         </h1>
+        <button>Get Started</button>
       </div>
+
       <img src="img/header-img.png" alt="Image of a code snippet." />
     </div>
+
     <section class="first-section">
       <div class="content-first">
         <h2>
@@ -46,6 +55,7 @@
           convallis augue justo, at imperdiet metus scelerisque quis.
         </p>
       </div>
+
       <div class="content-first">
         <h2>
           About
@@ -56,12 +66,14 @@
           convallis augue justo, at imperdiet metus scelerisque quis.
         </p>
       </div>
-    </section class="second-section">
+    </section>
+
     <img
       class="middle-img"
       src="img/mid-page-accent.jpg"
       alt="Image of code snippets across the screen"
     />
+
     <section class="second-section">
       <div class="content-second">
         <h2>
@@ -73,7 +85,6 @@
           convallis augue justo, at imperdiet metus scelerisque quis.
         </p>
       </div>
-
       <div class="content-second">
         <h2>
           Product
@@ -84,7 +95,6 @@
           convallis augue justo, at imperdiet metus scelerisque quis.
         </p>
       </div>
-
       <div class="content-second">
         <h2>
           Vision
@@ -96,17 +106,17 @@
         </p>
       </div>
     </section>
-    
+
     <footer id="footer">
       <address>
         <h2>
           Contact
         </h2>
-        123 Way 456 Street <br>
+        123 Way 456 Street <br />
         Somewhere, USA <br />
-        <br>
+        <br />
         1 (888) 888-8888 <br />
-        <br>
+        <br />
         <a href="sales@greatidea.io">sales@greatidea.io</a>
       </address>
       <div id="copyright">
