--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -38,7 +38,7 @@
           On <br />
           Demand
         </h1>
-        <button>Get Started</button>
+        <button class="action">Get Started</button>
       </div>
 
       <img src="img/header-img.png" alt="Image of a code snippet." />
