added id to section and copyright

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -32,17 +32,20 @@
       src="img/services-header.jpg"
       alt="Our services header image"
     />
-    <!-- Does every page need an h1? -->
-    <h2>
-      Services
-    </h2>
-    <p>
-      Our services provide the best digital value in nulla suscipit interdum
-      diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
-      iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur
-      cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-      pellentesque eleifend. Mauris euismod facilisis iaculis.
-    </p>
+
+    <section id="services-intro">
+      <h2>
+        <!-- Does every page need an h1? -->
+        Services
+      </h2>
+      <p>
+        Our services provide the best digital value in nulla suscipit interdum
+        diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
+        iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur
+        cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+        pellentesque eleifend. Mauris euismod facilisis iaculis.
+      </p>
+    </section>
 
     <section id="services-content">
       <div class="service-item">
@@ -127,23 +130,27 @@
         <button>Learn More</button>
       </div>
     </section>
-    <footer>
-      <h4>
-        Some Facts About Our Services
-      </h4>
-      <p>
-        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-        accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo
-        quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-        neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis
-        iaculis.
-      </p>
-      <ul>
-        <li>Awesome thing</li>
-        <li>Amazing thing</li>
-        <li>Cool thing</li>
-        <li>Great thing</li>
-      </ul>
+    <footer id="services-footer">
+      <div id="footer-container">
+        <h4>
+          Some Facts About Our Services
+        </h4>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <div id="ul-container">
+          <ul>
+            <li>Awesome thing</li>
+            <li>Amazing thing</li>
+            <li>Cool thing</li>
+            <li>Great thing</li>
+          </ul>
+        </div>
+      </div>
 
       <img
         class="services-info-img"
@@ -152,6 +159,8 @@
       />
     </footer>
 
-    Copyright Great Idea! 2018
+    <div id="copyright">
+      Copyright Great Idea! 2018
+    </div>
   </body>
 </html>
