--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -25,7 +25,9 @@
         <a href="#">Contact</a>
       </nav>
 
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+      <a href="index.html"
+        ><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."
+      /></a>
     </div>
     <img
       class="services-header-img"
